2005-04-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-mode, mml-dnd-attach-file): Use dnd-* instead of
	x-dnd-*.

2005-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* qp.el (quoted-printable-encode-region): Save excursion.

2005-04-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-kill-buffer-query-if-modified): new variable
	so the user can kill a modified message buffer quickly
	(message-kill-buffer): use it.

2005-04-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind display-time-event-handler; don't fbind
	string-to-multibyte.

	* qp.el (quoted-printable-encode-region): Use mm-string-to-multibyte.

2005-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-node-text): Replace CRLFs (which might be
	contained in text because xml.el decodes entities) with LFs.

2005-04-11  Lute Kamstra  <lute@gnu.org>

	* nnimap.el (nnimap-date-days-ago): Handle byte-compiler warnings
	differently.

2005-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-detect-coding-region): Typo.

2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Fix misplaced parens.

2005-04-06  D Goel  <deego@gnufans.org>

	* spam-stat.el (spam-stat-score-buffer): Add a call to a
	user-function allow user modifications of the scores.
	(spam-stat-score-buffer-user): New function, to allow
	user-computed modifications to the score.
	(spam-stat-score-buffer-user-functions): list of additional
	scoring functions
	(spam-stat-error-holder): global temporary error holder
	(spam-stat-split-fancy): use the new `spam-stat-error-holder'
	variable

2005-04-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-clean-empty-function)
	(gnus-registry-trim, gnus-registry-fetch-groups)
	(gnus-registry-delete-group): now groups that match
	`gnus-registry-ignored-groups' will be removed from the registry
	entries, not just ignored for splitting.  This helps clean up the